--- a/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.scss
@@ -12,7 +12,8 @@ $typography: map.get(gio.$mat-theme, typography);
 
 .card {
   &__template-key,
-  &__accept-header {
+  &__accept-header,
+  &__status-code {
     &__label {
       @include mat.typography-level($typography, body-2);
     }
