--- a/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.html
@@ -76,6 +76,21 @@
         </mat-error>
       </mat-form-field>
     </div>
+
+    <div class="card__http-headers">
+      <div class="card__http-headers__label">HTTP Headers</div>
+      <gio-form-headers formControlName="headers"></gio-form-headers>
+    </div>
+
+    <!-- Status code -->
+    <div class="card__body">
+      <div class="card__body__label">Body</div>
+      <p class="card__body__hint">Response template body.</p>
+      <mat-form-field class="card__body__form-field" appearance="fill">
+        <mat-label>Body</mat-label>
+        <textarea matInput formControlName="body"> </textarea>
+      </mat-form-field>
+    </div>
   </mat-card>
 </form>
 
