feat(console): add go back button in ApiProxyResponseTemplatesEdit page

--- a/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.html
@@ -15,9 +15,14 @@
     limitations under the License.
 
 -->
-<h1>Response Template</h1>
 
 <form *ngIf="responseTemplatesForm" [formGroup]="responseTemplatesForm" autocomplete="off" gioFormFocusInvalid>
+  <h1>
+    <gio-go-back-button [ajsGo]="{ to: 'management.apis.detail.proxy.ng-responsetemplates', params: { apiId: apiId } }"></gio-go-back-button>
+    <ng-container *ngIf="mode === 'new'">Create a new Response Template</ng-container>
+    <ng-container *ngIf="mode === 'edit'">Update Response Template</ng-container>
+  </h1>
+
   <mat-card>
     <!-- Key -->
     <div class="card__template-key">
