--- a/gravitee-apim-console-webui/src/management/api/policy-studio/design/policy-studio-design.component.html
+++ b/gravitee-apim-console-webui/src/management/api/policy-studio/design/policy-studio-design.component.html
@@ -24,6 +24,7 @@
   has-policy-filter
   has-conditional-steps
   sortable
+  [attr.readonly]="isReadonly"
   [attr.readonly-plans]="readonlyPlans ? readonlyPlans : null"
   [flowSchema]="apiFlowSchema"
   [policies]="policies"
