refactor(console): read only mode for policy studio

--- a/gravitee-apim-console-webui/src/management/api/policy-studio/properties/policy-studio-properties.component.html
+++ b/gravitee-apim-console-webui/src/management/api/policy-studio/properties/policy-studio-properties.component.html
@@ -18,7 +18,7 @@
 <gv-properties
   *ngIf="!isLoading"
   class="policy-studio-properties"
-  [attr.readonly]="isReadonly"
+  [attr.readonly]="isReadonly ? isReadonly : null"
   [provider]="this.provider"
   (:gv-properties:change)="this.onChange($event)"
   (:gv-properties:save-provider)="this.onSaveProvider($event)"
