--- a/gravitee-apim-console-webui/src/management/api/policy-studio/config/policy-studio-config.component.html
+++ b/gravitee-apim-console-webui/src/management/api/policy-studio/config/policy-studio-config.component.html
@@ -23,7 +23,7 @@
 
   <gv-schema-form
     class="policy-studio-api-config__schema-form"
-    [attr.readonly]="isReadonly"
+    [attr.readonly]="isReadonly ? isReadonly : null"
     [schema]="this.schema"
     [values]="this.apiDefinition"
     (:gv-schema-form:change)="onChange($event)"
