refactor(console): read only mode for proxy menu

--- a/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/response-templates/edit/api-proxy-response-templates-edit.component.html
@@ -104,6 +104,7 @@
   </mat-card>
 
   <gio-save-bar
+    *ngIf="!isReadOnly"
     [creationMode]="mode === 'new'"
     [form]="responseTemplatesForm"
     [formInitialValues]="initialResponseTemplatesFormValue"
