--- a/gravitee-apim-console-webui/docker/config/templates/default.conf.tmpl
+++ b/gravitee-apim-console-webui/docker/config/templates/default.conf.tmpl
@@ -19,6 +19,8 @@ server {
     location / {
         try_files $uri $uri/ =404;
         root /usr/share/nginx/html;
+        sub_filter '<base href="/"' '<base href="{{ getenv "CONSOLE_BASE_HREF" "/" }}"';
+        sub_filter_once on;
     }
 
     # redirect server error pages to the static page /50x.html
