--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -144,7 +144,7 @@
     <!-- Row shown when there is no data -->
     <tr class="mat-row" *matNoDataRow>
       <td *ngIf="!isLoadingData && apisTableDS.length === 0" class="mat-cell" [attr.colspan]="displayedColumns.length">
-        {{ 'There is no APIs (yet).' }}
+        {{ 'There is no API (yet).' }}
       </td>
       <td *ngIf="isLoadingData" class="mat-cell" [attr.colspan]="displayedColumns.length">
         {{ 'Loading...' }}
