--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.scss
@@ -1,4 +1,9 @@
+@use 'sass:map';
 @use '../../../../../scss/gio-layout' as gio-layout;
+@use 'node_modules/@angular/material' as mat;
+@use '@gravitee/ui-particles-angular' as gio;
+
+$foreground: map.get(gio.$mat-theme, foreground);
 
 :host {
   @include gio-layout.gio-responsive-content-container;
@@ -19,6 +24,10 @@
     &__actions {
       display: flex;
       justify-content: center;
+    }
+
+    &__badge {
+      margin-bottom: 2px;
     }
   }
 }
