feat: delete endpoint in a group

--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
@@ -134,6 +134,15 @@
             >
               <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
             </button>
+            <button
+              *gioPermission="{ anyOf: ['api-definition-u'] }"
+              mat-icon-button
+              (click)="deleteEndpoint(endpointGroupData.name, element.name)"
+              aria-label="Delete endpoint"
+              matTooltip="Delete endpoint"
+            >
+              <mat-icon svgIcon="gio:trash"></mat-icon>
+            </button>
           </div>
         </td>
       </ng-container>
