feat: display inherit icon for http configuration

--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
@@ -84,6 +84,7 @@
         <th mat-header-cell *matHeaderCellDef id="healthCheck" width="5%"></th>
         <td mat-cell *matCellDef="let element">
           <mat-icon *ngIf="element.healthcheck" matTooltip="Health check is enabled">favorite</mat-icon>
+          <mat-icon *ngIf="element.inherit" matTooltip="HTTP configuration inherited">subdirectory_arrow_right</mat-icon>
         </td>
       </ng-container>
 
