--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
@@ -31,33 +31,45 @@
     <div class="endpoint-list__header">
       <h2>{{ endpointGroupData.name }}</h2>
       <div>
-        <button
-          *gioPermission="{ anyOf: ['api-definition-u'] }"
-          mat-icon-button
-          (click)="navigateToEndpoint(endpointGroupData.name, '')"
-          aria-label="Add new endpoint"
-          matTooltip="Add new endpoint"
-        >
-          <mat-icon svgIcon="gio:plus"></mat-icon>
-        </button>
-        <button
-          *gioPermission="{ anyOf: ['api-definition-u'] }"
-          mat-icon-button
-          (click)="navigateToGroup(endpointGroupData.name)"
-          aria-label="Edit group"
-          matTooltip="Edit group"
-        >
-          <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
-        </button>
-        <button
-          *gioPermission="{ anyOf: ['api-definition-u'] }"
-          mat-icon-button
-          (click)="deleteGroup(endpointGroupData.name)"
-          aria-label="Delete group"
-          matTooltip="Delete group"
-        >
-          <mat-icon svgIcon="gio:trash"></mat-icon>
-        </button>
+        <ng-container *ngIf="!isReadOnly; else readOnlyGroupActions">
+          <button
+            *gioPermission="{ anyOf: ['api-definition-u'] }"
+            mat-icon-button
+            (click)="navigateToEndpoint(endpointGroupData.name, '')"
+            aria-label="Add new endpoint"
+            matTooltip="Add new endpoint"
+          >
+            <mat-icon svgIcon="gio:plus"></mat-icon>
+          </button>
+          <button
+            *gioPermission="{ anyOf: ['api-definition-u'] }"
+            mat-icon-button
+            (click)="navigateToGroup(endpointGroupData.name)"
+            aria-label="Edit group"
+            matTooltip="Edit group"
+          >
+            <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
+          </button>
+          <button
+            *gioPermission="{ anyOf: ['api-definition-u'] }"
+            mat-icon-button
+            (click)="deleteGroup(endpointGroupData.name)"
+            aria-label="Delete group"
+            matTooltip="Delete group"
+          >
+            <mat-icon svgIcon="gio:trash"></mat-icon>
+          </button>
+        </ng-container>
+        <ng-template #readOnlyGroupActions>
+          <button
+            mat-icon-button
+            aria-label="Button to open group detail"
+            matTooltip="Open group detail"
+            (click)="navigateToGroup(endpointGroupData.name)"
+          >
+            <mat-icon svgIcon="gio:eye-empty"></mat-icon>
+          </button>
+        </ng-template>
       </div>
     </div>
 
@@ -117,33 +129,35 @@
         <th mat-header-cell *matHeaderCellDef id="actions" width="1%"></th>
         <td mat-cell *matCellDef="let element">
           <div class="endpoint-list__table__actions">
-            <button
-              *ngIf="isReadOnly"
-              mat-icon-button
-              aria-label="Button to open endpoint detail"
-              matTooltip="Open endpoint detail"
-              (click)="navigateToEndpoint(endpointGroupData.name, element.name)"
-            >
-              <mat-icon svgIcon="gio:eye-empty"></mat-icon>
-            </button>
-            <button
-              *ngIf="!isReadOnly"
-              mat-icon-button
-              aria-label="Button to edit an endpoint"
-              matTooltip="Edit endpoint"
-              (click)="navigateToEndpoint(endpointGroupData.name, element.name)"
-            >
-              <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
-            </button>
-            <button
-              *gioPermission="{ anyOf: ['api-definition-u'] }"
-              mat-icon-button
-              (click)="deleteEndpoint(endpointGroupData.name, element.name)"
-              aria-label="Delete endpoint"
-              matTooltip="Delete endpoint"
-            >
-              <mat-icon svgIcon="gio:trash"></mat-icon>
-            </button>
+            <ng-container *ngIf="!isReadOnly; else readOnlyEndpointActions">
+              <button
+                mat-icon-button
+                aria-label="Button to edit an endpoint"
+                matTooltip="Edit endpoint"
+                (click)="navigateToEndpoint(endpointGroupData.name, element.name)"
+              >
+                <mat-icon svgIcon="gio:edit-pencil"></mat-icon>
+              </button>
+              <button
+                *gioPermission="{ anyOf: ['api-definition-u'] }"
+                mat-icon-button
+                (click)="deleteEndpoint(endpointGroupData.name, element.name)"
+                aria-label="Delete endpoint"
+                matTooltip="Delete endpoint"
+              >
+                <mat-icon svgIcon="gio:trash"></mat-icon>
+              </button>
+            </ng-container>
+            <ng-template #readOnlyEndpointActions>
+              <button
+                mat-icon-button
+                aria-label="Button to open endpoint detail"
+                matTooltip="Open endpoint detail"
+                (click)="navigateToEndpoint(endpointGroupData.name, element.name)"
+              >
+                <mat-icon svgIcon="gio:eye-empty"></mat-icon>
+              </button>
+            </ng-template>
           </div>
         </td>
       </ng-container>
