--- a/gravitee-apim-console-webui/src/management/api/proxy/cors/api-proxy-cors.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/cors/api-proxy-cors.component.scss
@@ -15,6 +15,10 @@ $foreground: map.get(gio.$mat-theme, foreground);
   &__enable-toggle {
     padding-bottom: 16px;
     width: 100%;
+
+    mat-slide-toggle {
+      margin: 0 8px;
+    }
   }
 
   &__allow-origin,
