feat: move secondary badge into icons column

--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.scss
@@ -26,8 +26,9 @@ $foreground: map.get(gio.$mat-theme, foreground);
       justify-content: center;
     }
 
-    &__badge {
-      margin-bottom: 2px;
+    &__hc {
+      display: flex;
+      flex-direction: row;
     }
   }
 }
