--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
@@ -85,24 +85,24 @@
         <th mat-header-cell *matHeaderCellDef id="name" width="20%">Name</th>
         <td mat-cell *matCellDef="let element">
           {{ element.name }}
-          <span *ngIf="element.isBackup" matTooltip="Secondary endpoint" class="endpoint-list__table__badge gio-badge-neutral"
-            >Secondary</span
-          >
         </td>
       </ng-container>
 
       <!-- Health Check Column -->
       <ng-container matColumnDef="healthCheck">
-        <th mat-header-cell *matHeaderCellDef id="healthCheck" width="5%"></th>
+        <th mat-header-cell *matHeaderCellDef id="healthCheck" width="10%"></th>
         <td mat-cell *matCellDef="let element">
-          <mat-icon *ngIf="element.healthcheck" matTooltip="Health check is enabled">favorite</mat-icon>
-          <mat-icon *ngIf="element.inherit" matTooltip="HTTP configuration inherited">subdirectory_arrow_right</mat-icon>
+          <div class="endpoint-list__table__hc">
+            <span *ngIf="element.isBackup" matTooltip="Secondary endpoint" class="gio-badge-neutral">Secondary</span>
+            <mat-icon *ngIf="element.healthcheck" matTooltip="Health check is enabled">favorite</mat-icon>
+            <mat-icon *ngIf="element.inherit" matTooltip="HTTP configuration inherited">subdirectory_arrow_right</mat-icon>
+          </div>
         </td>
       </ng-container>
 
       <!-- Target Column -->
       <ng-container matColumnDef="target">
-        <th mat-header-cell *matHeaderCellDef id="target" width="30%">Target</th>
+        <th mat-header-cell *matHeaderCellDef id="target" width="25%">Target</th>
         <td mat-cell *matCellDef="let element">
           {{ element.target }}
         </td>
