fix(design-studio): display available resources again
An HTML boolean attribute can't be false. It simply exists or not.

--- a/gravitee-apim-console-webui/src/management/api/policy-studio/resources/policy-studio-resources.component.html
+++ b/gravitee-apim-console-webui/src/management/api/policy-studio/resources/policy-studio-resources.component.html
@@ -18,7 +18,7 @@
 <gv-resources
   *ngIf="!isLoading"
   class="policy-studio-resources"
-  [attr.readonly]="isReadonly"
+  [attr.readonly]="this.isReadonly"
   (:gv-resources:change)="this.onChange($event)"
   [resources]="this.apiDefinition.resources"
   [types]="this.resourceTypes"
