--- a/gravitee-apim-console-webui/src/management/api/details/api-portal-details.component.html
+++ b/gravitee-apim-console-webui/src/management/api/details/api-portal-details.component.html
@@ -42,7 +42,28 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="details-card__header__media"></div>
+      <div class="details-card__header__media">
+        <gio-form-file-picker class="details-card__header__media__picture" formControlName="picture" accept="image/*">
+          <gio-form-file-picker-add-button class="details-card__header__media__picture__btn">
+            <span class="details-card__header__media__picture__btn__text">
+              Change picture
+              <br />
+              Drag your image
+            </span>
+            <gio-avatar class="details-card__header__media__picture__btn__default-avatar" size="114" [name]="apiName.value"></gio-avatar>
+          </gio-form-file-picker-add-button>
+        </gio-form-file-picker>
+        <gio-form-file-picker class="details-card__header__media__background" formControlName="background" accept="image/*">
+          <gio-form-file-picker-add-button class="details-card__header__media__background__btn">
+            <span class="details-card__header__media__background__btn__text">
+              Change background
+              <br />
+              Drag your image
+            </span>
+          </gio-form-file-picker-add-button>
+          <gio-form-file-picker-empty>No background defined</gio-form-file-picker-empty>
+        </gio-form-file-picker>
+      </div>
     </div>
   </mat-card>
 
