--- a/gravitee-apim-console-webui/src/management/api/details/api-portal-details.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/details/api-portal-details.component.scss
@@ -38,66 +38,73 @@ $typography: map.get(gio.$mat-theme, typography);
       }
 
       &__second-row {
+        margin-top: 8px;
         display: flex;
         flex-direction: column;
 
-        &__description-field {
-          flex: 1 1 auto;
-        }
-        &__labels-field {
+        &__description-field,
+        &__labels-field,
+        &__categories-field {
           flex: 1 1 auto;
         }
       }
     }
 
-    &__media {
-      margin-left: 16px;
-      display: flex;
+    &__right-coll {
+      flex: 0 0 460px;
+      &__media {
+        margin-left: 16px;
+        display: flex;
 
-      &__picture {
-        &__btn {
-          position: relative;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          height: 100%;
-
-          &__text {
-            @include mat.typography-level($typography, caption);
-            position: absolute;
-            width: 100%;
-            height: 114px;
-            z-index: 100;
-            left: 0;
-            visibility: hidden;
-            opacity: 0;
+        &__picture {
+          &__btn {
+            position: relative;
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
+            height: 100%;
+
+            &__text {
+              @include mat.typography-level($typography, caption);
+              position: absolute;
+              width: 100%;
+              height: 114px;
+              z-index: 100;
+              left: 0;
+              visibility: hidden;
+              opacity: 0;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+          }
+
+          &:hover {
+            .details-card__header__media__picture__btn__default-avatar {
+              opacity: 0.1;
+            }
+            .details-card__header__media__picture__btn__text {
+              opacity: 1;
+              visibility: visible;
+            }
           }
         }
 
-        &:hover {
-          .details-card__header__media__picture__btn__default-avatar {
-            opacity: 0.1;
-          }
-          .details-card__header__media__picture__btn__text {
-            opacity: 1;
-            visibility: visible;
+        &__background {
+          &__btn {
+            &__text {
+              @include mat.typography-level($typography, caption);
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              height: 114px;
+            }
           }
         }
       }
 
-      &__background {
-        &__btn {
-          &__text {
-            @include mat.typography-level($typography, caption);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 114px;
-          }
-        }
+      &__info {
+        padding-left: 16px;
       }
     }
   }
