fix: revert part of href fix to ensure retrocompatibility
This commit revert part of b03a8eb to ensure there is no breaking change in 3.18.x version.

gravitee-io/issues#8518

--- a/gravitee-apim-console-webui/docker/config/templates/default.conf.tmpl
+++ b/gravitee-apim-console-webui/docker/config/templates/default.conf.tmpl
@@ -19,7 +19,7 @@ server {
     location / {
         try_files $uri $uri/ =404;
         root /usr/share/nginx/html;
-        sub_filter '<base href="/"' '<base href="{{ getenv "CONSOLE_BASE_HREF" "/" }}"';
+        sub_filter '<base href="./"' '<base href="{{ getenv "CONSOLE_BASE_HREF" "./" }}"';
         sub_filter_once on;
     }
 
