--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.html
@@ -23,7 +23,9 @@
 <mat-tab-group animationDuration="0ms">
   <mat-tab label="General">
     <!-- General tab content -->
-    <api-proxy-group-general *ngIf="group" [group]="group"></api-proxy-group-general>
+    <div class="tab-body-wrapper">
+      <api-proxy-group-general *ngIf="generalForm" [generalForm]="generalForm"></api-proxy-group-general>
+    </div>
   </mat-tab>
   <mat-tab label="Configuration">
     <!-- Configuration tab content -->
@@ -32,3 +34,10 @@
     <!-- Service discovery tab content -->
   </mat-tab>
 </mat-tab-group>
+
+<gio-save-bar
+  *ngIf="!isReadOnly && groupForm?.dirty"
+  [form]="groupForm"
+  [formInitialValues]="initialGroupFormValue"
+  (submitted)="onSubmit()"
+></gio-save-bar>
