--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/general/api-proxy-group-general.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/general/api-proxy-group-general.component.html
@@ -15,7 +15,32 @@
     limitations under the License.
 
 -->
-<form>
-  <!-- add edit or create group form -->
-  {{ group | json }}
+<form *ngIf="!!generalForm" [formGroup]="generalForm" autocomplete="off" gioFormFocusInvalid>
+  <mat-card>
+    <!-- Name -->
+    <div class="card__group-name">
+      <div class="card__group-name__label">Name</div>
+      <mat-form-field class="card__group-name__form-field" appearance="fill">
+        <mat-label>Name</mat-label>
+        <input type="text" aria-label="Group name input" matInput formControlName="name" required />
+        <mat-error *ngIf="generalForm.get('name').hasError('required')"> Name is required. </mat-error>
+        <mat-error *ngIf="generalForm.get('name').hasError('pattern')"> Group name does not support <code>:</code> in its name. </mat-error>
+      </mat-form-field>
+    </div>
+
+    <!-- Load balancing algorithm -->
+    <div class="card__group-lb">
+      <div class="card__group-lb__label">Load balancing algorithm</div>
+      <p class="card__group-lb__hint">
+        You can configure load balancing by creating a logical group of endpoints and specifying a load balancing algorithm for them.
+      </p>
+      <mat-form-field class="card__group-lb__form-field" appearance="fill">
+        <mat-label>Load balancing algorithm</mat-label>
+        <mat-select aria-label="Load balancing algorithm" formControlName="lb">
+          <mat-option *ngFor="let lb of loadBalancingValues | keyvalue" [value]="lb.value">{{ lb.value }}</mat-option>
+        </mat-select>
+        <mat-error *ngIf="generalForm.get('lb').hasError('required')"> Load balancing algorithm is required. </mat-error>
+      </mat-form-field>
+    </div>
+  </mat-card>
 </form>
