--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.html
@@ -31,7 +31,7 @@
     <!-- Configuration tab content -->
     <div class="tab-body-wrapper">
       <api-proxy-group-configuration
-        *ngIf="schemaForm && group"
+        *ngIf="schemaForm"
         [schemaForm]="schemaForm"
         [group]="group"
         (onConfigurationChange)="onConfigurationChange($event)"
@@ -42,7 +42,7 @@
     <!-- Service discovery tab content -->
     <div class="tab-body-wrapper">
       <api-proxy-group-service-discovery
-        *ngIf="serviceDiscoveryForm && serviceDiscoveryItems && group"
+        *ngIf="serviceDiscoveryForm && serviceDiscoveryItems"
         [serviceDiscoveryForm]="serviceDiscoveryForm"
         [serviceDiscoveryItems]="serviceDiscoveryItems"
         [group]="group"
