feat(console): manage gv-schema-form reset for api proxy groups

--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/edit/api-proxy-group-edit.component.html
@@ -60,4 +60,5 @@
   [form]="groupForm"
   [formInitialValues]="initialGroupFormValue"
   (submitted)="onSubmit()"
+  (resetClicked)="reset()"
 ></gio-save-bar>
