--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/list/api-proxy-endpoint-list.component.html
@@ -16,10 +16,10 @@
 
 -->
 
-<div class="endpoint-list__header" *ngIf="!isReadOnly && endpointGroupsTableData">
+<div class="endpoint-list__header">
   <h1>Endpoints</h1>
 
-  <div>
+  <div *ngIf="!isReadOnly && endpointGroupsTableData">
     <button *gioPermission="{ anyOf: ['api-definition-u'] }" mat-raised-button type="button" color="primary" (click)="navigateToGroup('')">
       <mat-icon svgIcon="gio:plus"></mat-icon>Add new endpoint group
     </button>
