--- a/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/endpoints/groups/endpoint/edit/api-proxy-group-endpoint-edit.component.html
@@ -35,6 +35,15 @@
   </mat-tab>
   <mat-tab label="Configuration">
     <!-- Configuration tab content -->
+    <div class="tab-body-wrapper">
+      <api-proxy-group-endpoint-configuration
+        *ngIf="configurationForm && configurationSchema && endpoint"
+        [configurationForm]="configurationForm"
+        [endpoint]="endpoint"
+        [configurationSchema]="configurationSchema"
+        (onConfigurationChange)="onConfigurationChange($event)"
+      ></api-proxy-group-endpoint-configuration>
+    </div>
   </mat-tab>
 </mat-tab-group>
 
